Fix data source alignment
- Update datasource to use govuk summary list, which does not push the card width when opening
- Remove flex between properties on cards which causes a data source to drop down when a data source next to it is opened

--- a/app/assets/sass/version-2/_components.scss
+++ b/app/assets/sass/version-2/_components.scss
@@ -71,11 +71,6 @@
       }
     }
 
-    &--align-vertically {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
   }
 
   .dfe-side-nav {
@@ -145,7 +140,7 @@
   }
 
   .dfe-summary-list-statistics {
-    .govuk-summary-list {
+    &.gov-uk-summary-list, .govuk-summary-list {
       width: auto;
       margin-bottom: 0;
     }
